@@ -877,6 +877,12 @@ class JavaLanguageServer extends LanguageServer {
         var renameOptions = new JsonObject();
         renameOptions.addProperty("prepareProvider", true);
         c.add("renameProvider", renameOptions);
+        var executeCommandOptions = new JsonObject();
+        var commands = new JsonArray();
+        commands.add("java.pickAndGenerate");
+        commands.add("java.generateFields");
+        executeCommandOptions.add("commands", commands);
+        c.add("executeCommandProvider", executeCommandOptions);
         var diagnosticOptions = new JsonObject();
         diagnosticOptions.addProperty("interFileDependencies", false);
         diagnosticOptions.addProperty("workspaceDiagnostics", false);
@@ -1244,10 +1250,8 @@ class JavaLanguageServer extends LanguageServer {
 
     private boolean canRename(Element rename) {
         return switch (rename.getKind()) {
-            case METHOD, FIELD, LOCAL_VARIABLE, PARAMETER, EXCEPTION_PARAMETER -> true;
-            default ->
-                // TODO rename other types
-                    false;
+            case METHOD, FIELD, LOCAL_VARIABLE, PARAMETER, EXCEPTION_PARAMETER, CLASS -> true;
+            default -> false;
         };
     }
 
@@ -1266,7 +1270,32 @@ class JavaLanguageServer extends LanguageServer {
         var response = new WorkspaceEdit();
         var map = rw.rewrite(getOrCreateCompiler());
         for (var editedFile : map.keySet()) {
-            response.changes.put(editedFile.toUri(), List.of(map.get(editedFile)));
+            response.changes.put(editedFile.toUri(), Arrays.asList(map.get(editedFile)));
+        }
+        // Schedule index refresh for modified files
+        if (!map.isEmpty()) {
+            completionIndexScheduler.scheduleRefresh(
+                    map.keySet(),
+                    "codeAction",
+                    0,
+                    CompletionIndexRefreshMode.WORKSPACE_DECLARATION_MERGE);
+        }
+        // For class renames, notify client to rename the file on disk
+        if (rw instanceof RenameClass rc) {
+            var sourceFile = getOrCreateCompiler().findTypeDeclaration(rc.oldQualifiedName);
+            if (sourceFile != null && sourceFile != CompilerProvider.NOT_FOUND) {
+                var oldPath = sourceFile.toAbsolutePath().normalize().toString();
+                var parent = sourceFile.getParent();
+                var newFileName = rc.newSimpleName + ".java";
+                var newPath =
+                        parent != null
+                                ? parent.resolve(newFileName).toAbsolutePath().normalize().toString()
+                                : newFileName;
+                var notificationParams = new HashMap<String, String>();
+                notificationParams.put("oldPath", oldPath);
+                notificationParams.put("newPath", newPath);
+                client.customNotification("java/renameFile", new Gson().toJsonTree(notificationParams));
+            }
         }
         return response;
     }
@@ -1292,6 +1321,10 @@ class JavaLanguageServer extends LanguageServer {
                 case FIELD -> renameField(task, (VariableElement) el, params.newName);
                 case LOCAL_VARIABLE, PARAMETER, EXCEPTION_PARAMETER ->
                         renameVariable(task, (VariableElement) el, params.newName);
+                case CLASS -> {
+                    var type = (TypeElement) el;
+                    yield new RenameClass(type.getQualifiedName().toString(), params.newName);
+                }
                 default -> Rewrite.NOT_SUPPORTED;
             };
         }
@@ -1404,6 +1437,42 @@ class JavaLanguageServer extends LanguageServer {
         } else {
             return provider.codeActionForDiagnostics(params);
         }
+    }
+
+    @Override
+    public Object executeCommand(ExecuteCommandParams params) {
+        if ("java.pickAndGenerate".equals(params.command)) {
+            var args = params.arguments;
+            if (args == null || args.size() < 3) return null;
+            var fields = args.get(2).getAsString();
+            return Map.of(
+                    "action", "pickFields",
+                    "className", args.get(0).getAsString(),
+                    "methodKind", args.get(1).getAsString(),
+                    "fields", fields);
+        }
+        if ("java.generateFields".equals(params.command)) {
+            var args = params.arguments;
+            if (args == null || args.size() < 3) return null;
+            var className = args.get(0).getAsString();
+            var methodKind = args.get(1).getAsString();
+            var selectedFields = new java.util.HashSet<String>();
+            for (var part : args.get(2).getAsString().split(",")) {
+                var trimmed = part.trim();
+                if (!trimmed.isEmpty()) selectedFields.add(trimmed);
+            }
+            if (selectedFields.isEmpty()) return null;
+            var rewrite = new org.javacs.rewrite.GenerateMethods(className, methodKind, 0, selectedFields);
+            var edits = rewrite.rewrite(getOrCreateCompiler());
+            if (edits != null && !edits.isEmpty()) {
+                var workspaceEdit = new WorkspaceEdit();
+                for (var entry : edits.entrySet()) {
+                    workspaceEdit.changes.put(entry.getKey().toUri(), Arrays.asList(entry.getValue()));
+                }
+                return workspaceEdit;
+            }
+        }
+        return null;
     }
 
     @Override
